syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Promotion.Grpc";

package promotion;

service PromotionService {
  //CRUD Operations
  rpc GetPromotionsByServicePackageId(GetPromotionsByServicePackageIdRequest) returns (GetPromotionsByServicePackageIdResponse);
  rpc GetPromotionByCode(GetPromotionByCodeRequest) returns (GetPromotionByCodeResponse); //Include gift code and promo code
  rpc GetGiftCodeByPatientId(GetGiftCodeByPatientIdRequest) returns (GetGiftCodeByPatientIdResponse); //Include gift code and promo code
  rpc CreatePromotion(CreatePromotionRequest) returns (PromotionDto);
  rpc UpdatePromotion(UpdatePromotionRequest) returns (UpdatePromotionResponse);
  rpc AddPromoCodesToPromotion(AddPromoCodesToPromotionRequest) returns (AddPromoCodesToPromotionResponse);
  rpc AddGiftCodesToPromotion(AddGiftCodesToPromotionRequest) returns (AddGiftCodesToPromotionResponse);
  rpc DeletePromotion(DeletePromotionRequest) returns (DeletePromotionResponse);
  rpc ConsumePromoCode(ConsumePromoCodeRequest) returns (ConsumePromoCodeResponse);
  rpc ConsumeGiftCode(ConsumeGiftCodeRequest) returns (ConsumeGiftCodeResponse);
  rpc ReactivatePromoCode(ReactivatePromoCodeRequest) returns (ReactivatePromoCodeResponse);
  rpc ReactivateGiftCode(ReactivateGiftCodeRequest) returns (ReactivateGiftCodeResponse);
  rpc GetPromotionById(GetPromotionByIdRequest) returns (GetPromotionByIdResponse);
  rpc GetGiftCodeByCode(GetGiftCodeByCodeRequest) returns  (GetGiftCodeByCodeResponse);
}

message GetPromotionsByServicePackageIdRequest {
  string servicePackageId = 1;
}

message GetPromotionsByServicePackageIdResponse {
  repeated PromotionDto promotions = 1;
}

message GetPromotionByCodeRequest {
  string code = 1;
  bool ignoreExpired = 2; //If true, it will ignore expired promotions
}

message GetPromotionByCodeResponse {
  PromoCodeActivateDto promoCode = 1;
}

message GetGiftCodeByPatientIdRequest {
  string Id = 1;
}

message GetGiftCodeByPatientIdResponse {
  repeated GiftCodeActivateDto giftCode = 1;
}

message CreatePromotionRequest {
  string promotionTypeId = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
  CreatePromoCodesDto createPromoCodesDto = 4;
}

message AddPromoCodesToPromotionRequest {
  string promotionId = 1;
  CreatePromoCodesDto promoCode = 2;
}

message AddGiftCodesToPromotionRequest {
  string promotionId = 1;
  CreateGiftCodeDto createGiftCodeDto = 2;
}

message UpdatePromotionRequest {
  //  string ImageId = 3;
  string promotionId = 1;
  google.protobuf.Timestamp startDate = 4;
  google.protobuf.Timestamp endDate = 5;
}

message UpdatePromotionResponse {
  bool isSuccess = 1;
}

message DeletePromotionRequest {
  string promotionId = 1;
}

message DeletePromotionResponse {
  bool isSuccess = 1;
}

message PromotionDto {
  string id = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
  bool isActive = 4;
  PromotionTypeDto promotionType = 5;
  repeated PromoCodeDto promoCodes = 6;
  repeated GiftCodeDto giftCodes = 7;
}

message PromotionTypeDto {
  string id = 1;
  string name = 2;
  string description = 3;
}

message GiftCodeDto {
  string id = 1;
  string promotionId = 2;
  double moneyValue = 3; //Using double as protobuf does not natively support decimal
  string title = 4;
  string description = 5;
  bool isActive = 6;
  string patientId = 7;
  string code = 8;
}

message GiftCodeActivateDto {
  string id = 1;
  string promotionId = 2;
  double moneyValue = 3; //Using double as protobuf does not natively support decimal
  string title = 4;
  string description = 5;
  PromotionTypeDto promotionType = 7;
  string code = 8;
}

//For listing of promo codes
message PromoCodeDto {
  string id = 1;
  string promotionId = 2;
  string code = 3;
  int32 value = 4;
  string name = 5;
  string description = 6;
  bool isActive = 7;
}

//For creating promo codes
message CreatePromoCodesDto {
  int32 value = 1;
  string name = 2;
  string description = 3;
  int32 quantity = 4;
}

message CreateGiftCodeDto {
  string patientId = 1;
  double moneyValue = 2; //Using double as protobuf does not natively support decimal
  string title = 3;
  string description = 4;
  string code = 5;
}

//For activating promo by code
message PromoCodeActivateDto {
  string id = 1;
  string promotionId = 2;
  string code = 3;
  int32 value = 4; //Discount percentage
  string name = 5;
  string description = 6;
  PromotionTypeDto promotionType = 7;
}

message AddPromoCodesToPromotionResponse {
  bool isSuccess = 1;
}

message AddGiftCodesToPromotionResponse {
  bool isSuccess = 1;
}

message ConsumePromoCodeRequest {
  string promoCodeId = 1;
}

message ConsumePromoCodeResponse {
  bool isSuccess = 1;
}

message ConsumeGiftCodeRequest {
  string giftCodeId = 1;
}

message ConsumeGiftCodeResponse {
  bool isSuccess = 1;
}

message ReactivatePromoCodeRequest {
  string promoCode = 1;
}

message ReactivatePromoCodeResponse {
  bool isSuccess = 1;
}

message ReactivateGiftCodeRequest {
  string giftId = 1;
}

message ReactivateGiftCodeResponse {
  bool isSuccess = 1;
}

message GetPromotionByIdRequest {
  string promotion_id = 1;
}

message GetPromotionByIdResponse {
  PromotionDto promotion = 1;
}

message GiftCodeByCodeDto {
  string id = 1;
  string promotionId = 2;
  double moneyValue = 3; 
  string title = 4;
  string description = 5;
  bool isActive = 6;
  string patientId = 7;
  string code = 8;
  string servicePackageId = 9;
}

message GetGiftCodeByCodeRequest {
  string code = 1;
}

message GetGiftCodeByCodeResponse {
  GiftCodeByCodeDto giftCode = 1;
}